tests/errors/function-missing-main.ari
fn helper() -> i64 {
  return 1;
}
